--- a/src/main/resources/templates/form/editForm.html
+++ b/src/main/resources/templates/form/editForm.html
@@ -47,13 +47,22 @@
             </div>
         </div>
 
+        <!-- multi checkbox -->
+        <div>
+            <div>등록 지역</div>
+            <div th:each="region : ${regions}" class="form-check form-check-inline">
+                <input type="checkbox" th:field="*{regions}" th:value="${region.key}" class="form-check-input"> <!-- *{regions} => ${item.regions} -->
+                <label th:for="${#ids.prev('regions')}"
+                       th:text="${region.value}" class="form-check-label">우즈</label> <!-- ${#ids.prev('regions')} 동적 id 생성 -->
+            </div>
+        </div>
+
         <div class="row">
             <div class="col">
                 <button class="w-100 btn btn-primary btn-lg" type="submit">저장</button>
             </div>
             <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='item.html'"
+                <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='item.html'"
                         th:onclick="|location.href='@{/form/items/{itemId}(itemId=${item.id})}'|"
                         type="button">취소</button>
             </div>
